# Programacion_2

Clases/Clase 1/ejemplos/: CMakeLists.txt  main.cpp
Clases/Clase 2_ operadores sobrecargados/OperadoresSobreCargados_Completo/: CMakeLists.txt  main.cpp
Clases/Clase 2_ operadores sobrecargados/OperadoresSobreCargados_Completo/Bibliotecas/: Operadores.cpp  Operadores.h
Clases/Clase 2_ operadores sobrecargados/OperadoresSobrecargadosComplejo/: CMakeLists.txt  main.cpp
Clases/Clase 2_ operadores sobrecargados/OperadoresSobrecargadosComplejo/Biblioteca/: Empleados.h  OperadoresSobrecargados.cpp  OperadoresSobrecargados.h  Persona.h
Clases/Clase 2_ operadores sobrecargados/operadoresSobrecargados/: CMakeLists.txt  main.cpp
Clases/Clase 2_ operadores sobrecargados/operadoresSobrecargados/Bibliotecas/: Persona.h  sobreCargas.cpp  sobreCargas.h
Clases/Clase 3/CrearBibliotecaPersonal/: CMakeLists.txt  main.cpp
Clases/Clase 3/CrearBibliotecaPersonal/MisBibliotecas/: Empleados.h  Persona.h
Clases/Clase 3/UsarBibliotecaPersonal/: CMakeLists.txt  main.cpp
Clases/Clase 3/masOperadoresSobrecargados/: CMakeLists.txt
Clases/Clase 4_ AsignacionDeMemoriaExactaa/primerMetodo/: CMakeLists.txt  main.cpp
Clases/Clase 4_ AsignacionDeMemoriaExactaa/primerMetodo/Biblioteca/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h
Clases/Clase 5_ Punteros multiples/PrimerEjemplo/: CMakeLists.txt  main.cpp
Clases/Clase 5_ Punteros multiples/PrimerEjemplo/Biblioteca/: Funciones Auxiliares.cpp  Funciones Auxiliares.h
Clases/Clase6/AginacionMemoriaExacta_2Archivos/: CMakeLists.txt  main.cpp
Clases/Clase6/AginacionMemoriaExacta_2Archivos/Bibliotecas/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h
Clases/Clase6/AsignacionMemoriaExacta_2Archvios_miSolu/: CMakeLists.txt  main.cpp
Clases/Clase6/AsignacionMemoriaExacta_2Archvios_miSolu/Bibliotecas/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h
Clases/Clase7_punterosGenericos/pruebasDePunteros/: CMakeLists.txt  main.cpp
Clases/Clase8_masPunterosGenericos/MiSolucion_lecturaDeAlumnos/: CMakeLists.txt  main.cpp
Clases/Clase8_masPunterosGenericos/MiSolucion_lecturaDeAlumnos/Bibliotecas/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h
Clases/Clase8_masPunterosGenericos/lecturaDeAlumnos/: CMakeLists.txt  main.cpp
Clases/Clase8_masPunterosGenericos/lecturaDeAlumnos/Bibliotecas/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h
Clases/clase10_punterosAFunciones/: CMakeLists.txt  main.cpp
Clases/clase10_punterosAFunciones/Bibliotecas/: FuncionesDeEnteris.cpp  FuncionesDeEnteris.h
Clases/clase11_quickSort/listaSimpleLigada/: CMakeLists.txt
Clases/clase11_quickSort/qSort/: CMakeLists.txt  main.cpp
Clases/clase11_quickSort/qSort/Bilbiotecas/: FuncionesDeEnteros.cpp  FuncionesDeEnteros.h  FuncionesDeOrdenacionGenerica.cpp  FuncionesDeOrdenacionGenerica.h
Clases/clase12_listas/listasGenericas/: CMakeLists.txt  main.cpp
Clases/clase12_listas/listasGenericas/Bibliotecas/: BibliotecaListaGenerica.cpp  BibliotecaListaGenerica.h  FuncionesDeCadenas.cpp  FuncionesDeCadenas.h  FuncionesDeEnteros.cpp  FuncionesDeEnteros.h  FuncionesDePunterosVoid.cpp  FuncionesDePunterosVoid.h
Laboratorios/Lab1/20234902_Arias_Edwin_Lab01_2025_1/20234902_Arias_Edwin_Lab01_2025_1/Parte1_CrearBiblioteca/Biblioteca_2025_1_Fuentes/: CMakeLists.txt
Laboratorios/Lab1/20234902_Arias_Edwin_Lab01_2025_1/20234902_Arias_Edwin_Lab01_2025_1/Parte1_CrearBiblioteca/Biblioteca_2025_1_Fuentes/Bibliotecas/: CadenaDeCaracteres.h  OperadoresSobreCargados.cpp  OperadoresSobreCargados.h
Laboratorios/Lab1/Copia de Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Parte1_CrearBiblioteca/Fuentes_Biblioteca_2025_2/: CMakeLists.txt
Laboratorios/Lab1/Copia de Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Parte1_CrearBiblioteca/Fuentes_Biblioteca_2025_2/MiBiblioteca/: Sobrecarga.cpp  Sobrecarga.h
Laboratorios/Lab1/Copia de Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Parte1_CrearBiblioteca/Prueba_Biblioteca_2025_2/: CMakeLists.txt  main.cpp
Laboratorios/Lab1/Copia de Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Parte2_UsarBiblioteca/UnaAplicacionConBibEstatica/: CMakeLists.txt
Laboratorios/Lab1/Copia de Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Lab01_2025_2_20236285_SAPALLANAY_YORDAN/Parte2_UsarBiblioteca/UnaAplicacionConBibEstatica/MiBiblioteca/: Funciones.cpp  Funciones.h
Laboratorios/Lab1/Lab01_2025_2_20234902_Arias_Edwin/CreaBiblioteca_Parte1/: CMakeLists.txt  main.cpp
Laboratorios/Lab1/Lab01_2025_2_20234902_Arias_Edwin/CreaBiblioteca_Parte1/Bibliotecas/: Operadores.cpp
Laboratorios/Lab1/Lab01_2025_2_20234902_Arias_Edwin/Parte2_UsarBiblioteca/: CMakeLists.txt  main.cpp
Laboratorios/Lab1/Lab01_2025_2_20234902_Arias_Edwin/Parte2_UsarBiblioteca/MisBibliotecas/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h  Operadores.h
Laboratorios/Lab1/lab1_2025-1/parte1_CrearBiblioteca/fuente_Biblioteca/: CMakeLists.txt  main.cpp
Laboratorios/Lab1/lab1_2025-1/parte1_CrearBiblioteca/fuente_Biblioteca/Bibliotecas/: OperadoresSobreCargados.cpp
Laboratorios/Lab1/lab1_2025-1/parte2_UsarBiblioteca/AplicacionConBibliotecaEstatica/: CMakeLists.txt  main.cpp
Laboratorios/Lab1/lab1_2025-1/parte2_UsarBiblioteca/AplicacionConBibliotecaEstatica/MisFunciones/: OperadoresSobreCargados.h
Laboratorios/Lab2/Lab2_2024-1/MetodoExactoDeMemoria-2024-1/: CMakeLists.txt  main.cpp
Laboratorios/Lab2/Lab2_2024-1/MetodoExactoDeMemoria-2024-1/Bibliotecas/: MetodoExactoDeMemoria.cpp  (+1 more)
Laboratorios/Lab2/Lab2_2025-1/Lab2_Andres/: CMakeLists.txt  main.cpp
Laboratorios/Lab2/Lab2_2025-1/Lab2_Andres/Bibliotecas/: Estructuras.h  FuncionesAuxiliares.cpp  FuncionesAuxiliares.h  OperadoresSobrecargados.cpp  OperadoresSobrecargados.h
Laboratorios/Lab2/Lab2_2025-2/Punteros_Multiples_Lab02_2025_2/: CMakeLists.txt  main.cpp
Laboratorios/Lab4/Lab4_2024-2/: CMakeLists.txt  main.cpp
Laboratorios/Lab4/Lab4_2024-2/Bibliotecas/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h
(+2 files in other folders)
